# docs/swagger.json
@@ -60,33 +60,6 @@
                 }
             }
         },
-        "/threads/token": {
-            "post": {
-                "tags": [
-                    "threads"
-                ],
-                "summary": "Create token",
-                "parameters": [
-                    {
-                        "description": "Create data",
-                        "name": "requestBody",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/threads.User"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/threads/{id}": {
             "get": {
                 "tags": [
@@ -194,20 +167,6 @@
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "string"
-                }
-            }
-        },
-        "threads.User": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "userId": {
-                    "type": "string"
-                },
-                "username": {
                     "type": "string"
                 }
             }
